Bug 88805 - [VLV regression] MinnowBoard MAX DRM hang on linux-next 3.19-rc5 2015-01-26
Summary: [VLV regression] MinnowBoard MAX DRM hang on linux-next 3.19-rc5 2015-01-26
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high major
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-26 17:51 UTC by Darren Hart
Modified: 2017-07-24 22:49 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
MinnowBoard MAX linux-next 3.19-rc5 2015-01-26 dmesg drm.debug=0x7 (26.58 KB, text/plain)
2015-01-26 17:51 UTC, Darren Hart
no flags Details
drm/i915: Do uncore early sanitize after domain init (2.64 KB, patch)
2015-01-27 17:01 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description Darren Hart 2015-01-26 17:51:58 UTC
Created attachment 112836 [details]
MinnowBoard MAX linux-next 3.19-rc5 2015-01-26 dmesg drm.debug=0x7

Olof Johanson originally reported his MinnowBoard MAX hung using linux-next 3.19-rc5+, I reproduced this using linux-next from 2015-01-26. His dmesg is here:

http://arm-soc.lixom.net/bootlogs/next/next-20150123/minnowmax-x86-minnowmax_defconfig.html

My dmesg is attached, the final drm messages leading to the hang follow:

...
[    1.673003] [drm] Initialized drm 1.1.0 20060810
[    1.679809] [drm] Memory usable by graphics device = 2048M
[    1.685985] [drm] Replacing VGA console driver
[    1.693153] [drm] Supports vblank timestamp caching Rev 2 (21.10.2013).
[    1.700581] [drm] Driver supports precise vblank timestamp query.
[    1.736168] vgaarb: device changed decodes: PCI:0000:00:02.0,olddecodes=io+mem,decodes=io+mem:owns=io+mem
[    1.988096] [drm] failed to retrieve link info, disabling eDP

This was bisected to:

commit fc72355f5c04c40f2916a07e9f8d4b357e2e0a93
Author:     Mika Kuoppala <mika.kuoppala@linux.intel.com>
AuthorDate: Mon Jan 19 16:20:43 2015 +0200
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Tue Jan 20 12:36:57 2015 +0100

    drm/i915: Consolidate forcewake code

Which appears to be related to the patch Jani V created to resolve a similar issue for this board:

commit 05adaf1f101f25f40f12c29403e6488f0e45f6b6
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri May 9 14:52:34 2014 +0300

    drm/i915/vlv: reset VLV media force wake request register

Jani confirms:
"""
That's the fix all right.
However there's

[    2.032075] [drm] failed to retrieve link info, disabling eDP

in the logs suggesting the minnowmax tries to initialize eDP which it
doesn't have. That's a VBT problem in itself, but since

commit d2182a660808d9053a605e3ebc8c46a323ec6e5d
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Fri Jan 9 14:21:14 2015 +0200

    drm/i915: Don't register HDMI connectors for eDP ports on VLV/CHV

we don't register HDMI if there's an eDP in the same port...

Potentially two problems I think.
"""
Comment 1 Mika Kuoppala 2015-01-27 17:01:04 UTC
Created attachment 112887 [details] [review]
drm/i915: Do uncore early sanitize after domain init
Comment 2 Darren Hart 2015-01-27 18:14:10 UTC
(In reply to Mika Kuoppala from comment #1)
> Created attachment 112887 [details] [review] [review]
> drm/i915: Do uncore early sanitize after domain init

Thanks, I applied this to my linux-next repo from the original report and rebuilt. It booted to console.

Tested-by: Darren Hart <dvhart@linux.intel.com>
Comment 3 Jani Nikula 2015-01-28 08:01:22 UTC
Mika, this hasn't been posted on the list, has it? Please post it, with reference to the regressing commit and Darren's Tested-by. Thanks.
Comment 4 Jani Nikula 2015-01-28 08:05:05 UTC
Unsolved is why the minnowboard max VBT says there's eDP on board. If that's still an issue (it would be if the HDMI is on the same port as the VBT says the eDP port is on, since commit "drm/i915: Don't register HDMI connectors for eDP ports on VLV/CHV") let's track that in another bug.
Comment 5 Mika Kuoppala 2015-01-30 16:35:37 UTC
commit f9b3927afbb97649f5c89f0815820167b7c5cba8
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Wed Jan 28 14:43:24 2015 +0200

    drm/i915: Do uncore early sanitize after domain init


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.